tests/ui/privacy/effective_visibilities_opaque.stderr
error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub(crate), ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities_opaque.rs:29:1
   |
LL | struct Priv;
   | ^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub(crate), ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities_opaque.rs:29:1
   |
LL | struct Priv;
   | ^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub(crate), ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities_opaque.rs:34:1
   |
LL | impl Priv {
   | ^^^^^^^^^

error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub(crate), ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities_opaque.rs:37:5
   |
LL |     pub fn foo() {}
   |     ^^^^^^^^^^^^

error: aborting due to 4 previous errors

